# BookPalette

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
